Fix production settings

--- a/medicalchain/render.yaml
+++ b/medicalchain/render.yaml
@@ -2,34 +2,34 @@ services:
   - type: web
     name: medicalchain-prod
     runtime: python
-    plan: free  # Spécifie explicitement le plan gratuit
-    branch: mchain  # Déploie depuis cette branche
+    plan: free
+    branch: mchain
     
-    # Commandes de build optimisées
     buildCommand: |
-      pip install -r medicalchain/requirements/prod.txt && \
-      cd medicalchain/frontend && \
-      npm install && \
-      npm run build && \
-      cd ../.. && \
+      pip install -r medicalchain/requirements/prod.txt
+      cd medicalchain/frontend && npm install && npm run build
+      cd ../..
       python medicalchain/manage.py collectstatic --noinput
 
-    # Commande de démarrage corrigée
-    startCommand: gunicorn medicalchain.wsgi:application --bind 0.0.0.0:$PORT --timeout 120
+    startCommand: gunicorn medicalchain.wsgi:application --bind 0.0.0.0:$PORT --workers 2 --threads 2 --timeout 120
 
-    # Variables d'environnement essentielles
     envVars:
       - key: DJANGO_ENV
         value: production
+      - key: DJANGO_SETTINGS_MODULE  # Nécessaire pour Django
+        value: medicalchain.settings.prod
+      - key: SECRET_KEY
+        value: votre_clé_secrète
+      - key: ALLOWED_HOSTS
+        value: ".onrender.com"
       - key: NODE_VERSION
         value: 20
       - key: PYTHON_VERSION
-        value: 3.11.6  # Version spécifique recommandée
+        value: 3.11.6
       - key: DISABLE_COLLECTSTATIC
-        value: 0  # Active la collecte des fichiers statiques
-      - key: GUNICORN_CMD_ARGS
-        value: "--workers=2 --threads=4"  # Configuration pour le plan gratuit
+        value: 0
+      - key: DATABASE_URL  # Si vous utilisez PostgreSQL
+        value: postgresql://user:password@host:port/dbname
 
-    # Paramètres avancés
     autoDeploy: yes
     healthCheckPath: /health-check/
