--- a/render-prod.yaml
+++ b/render-prod.yaml
@@ -1,16 +1,16 @@
 services:
   - type: web
     name: medicalchain-prod
-    runtime: python
+    env: python
     plan: free
     branch: main
     buildCommand: |
       pip install --upgrade pip
-      pip install -r medicalchain/requirements/prod.txt
-      cd medicalchain/frontend && npm install && npm run build
-      cd ../..
-      python medicalchain/manage.py collectstatic --noinput
-      python medicalchain/manage.py migrate --noinput
+      pip install -r requirements/prod.txt
+      cd frontend && npm install && npm run build
+      cd ..
+      python manage.py collectstatic --noinput
+      python manage.py migrate --noinput
     startCommand: gunicorn medicalchain.wsgi:application --bind 0.0.0.0:$PORT --workers 2 --timeout 120
     envVars:
       - key: DJANGO_ENV
@@ -22,14 +22,14 @@ services:
       - key: ALLOWED_HOSTS
         value: "medicalchain-prod.onrender.com"
       - key: NODE_VERSION
-        value: 20
+        value: "20"
       - key: PYTHON_VERSION
         value: "3.11.6"
       - key: DISABLE_COLLECTSTATIC
-        value: 0
+        value: "0"
       - key: DATABASE_URL
         fromDatabase:
           name: medicalchain_db
           property: connectionString
-    autoDeploy: yes
+    autoDeploy: true
     healthCheckPath: /health-check/
