--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: medicalchain-prod
+    name: medicalchain-dev
     runtime: python
     plan: free
-    branch: main
+    branch: develop
 
     buildCommand: |
       pip install --upgrade pip
@@ -19,14 +19,14 @@ services:
       - key: DJANGO_SETTINGS_MODULE
         value: medicalchain.settings.prod
       - key: SECRET_KEY
-        value: DEPLOYER_PRIVATE_KEY
+        generateValue: true  # Render génère automatiquement la clé
       - key: DEBUG
-        value: "0"
+        value: "1"  # En staging, activer le debug est possible (ou "0" si tu préfères la prod-like)
       - key: ALLOWED_HOSTS
         value: "medicalchain-dev.onrender.com"
       - key: DATABASE_URL
         fromDatabase:
-          name: medicalchain_db
+          name: medicalchain_db_dev  # Si tu as une DB de staging séparée, sinon utilise la même
           property: connectionString
       - key: REDIS_URL
         value: "redis://redis:6379/0"
@@ -37,7 +37,7 @@ services:
       - key: ETHERSCAN_API_KEY
         value: "N1C827X4GWPEFQ4WT7PM11NV12J5PZ94JR"
       - key: DEPLOYER_PRIVATE_KEY
-        value: DEPLOYER_PRIVATE_KEY
+        value: "${{DEPLOYER_PRIVATE_KEY}}"  # Mets la valeur dans Render, pas ici
       - key: CONTRACT_ADDRESS
         value: "0x377220624586d920f560f83222A032CA26e367F0"
       - key: REACT_APP_API_URL
