--- a/render.yaml
+++ b/render.yaml
@@ -27,7 +27,7 @@ services:
       - key: NODE_VERSION
         value: 20
       - key: PYTHON_VERSION
-        value: "3.11.6"
+        value: 3.11.6
       - key: DISABLE_COLLECTSTATIC
         value: 0
       - key: DATABASE_URL
