--- a/render.yaml
+++ b/render.yaml
@@ -45,7 +45,7 @@ services:
       - key: NODE_VERSION
         value: "20"
       - key: PYTHON_VERSION
-        value: 3.11.4
+        value: "3.11.4"
 
     autoDeploy: true
     healthCheckPath: /health-check/
