--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,20 @@ gunicorn = "21.2.0"
 redis = "5.2.1"
 web3 = {version = "6.15.1", python = "<4,>=3.8"}
 django-silk = "^5.3.2"
+python-dotenv = "^1.0.0"
+celery = "^5.3.4" 
+djangorestframework-simplejwt = "^5.5.0"
+drf-spectacular = "^0.28.0"
+channels = "^4.2.2"
+django-celery-beat = "^2.8.1"
+django-celery-results = "^2.6.0"
+django-filter = "^25.1"
+django-cors-headers = "^4.7.0"
+pytz = "^2025.2"
+django-redis = "^6.0.0"
+channels-redis = "^4.2.1"
+Pillow = "^10.3.0"
+whitenoise = "^6.6.0" 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "7.0.0"
